application/app_k8s_manifest/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: 548570664128.dkr.ecr.us-east-1.amazonaws.com/capstone-backend:1.0.0
        ports:
        - containerPort: 8000
        readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
        livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
