application/app_k8s_manifest/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: 548570664128.dkr.ecr.us-east-1.amazonaws.com/capstone-frontend:1.0.0
        ports:
        - containerPort: 3000
